--- a/miniprogram/pages/home/index.wxss
+++ b/miniprogram/pages/home/index.wxss
@@ -7,11 +7,18 @@
 .header {
   width: 100%;
   display: flex;
-  justify-content:flex-end;
+  justify-content: center;
   align-items: center;
   padding: 16px 0;
   margin-bottom: 8px;
   height: 40px;
+}
+
+.title {
+  font-size: 24px;
+  font-weight: 500;
+  color: var(--text-primary);
+  text-align: center;
 }
 
 .scan-btn {
